<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>pl.gamilife</groupId>
    <artifactId>gamilife</artifactId>
    <version>0.7.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>api</module>
        <module>app</module>
        <module>shared</module>
        <module>modules</module>
    </modules>
    <name>GamiLife</name>
    <description>Backend application GamiLife</description>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.5.7</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-bom</artifactId>
                <version>2.8.14</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Business Modules -->
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>gamification</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>group-shop</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>group-task</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>group</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>pomodoro</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>task</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>user</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>communication</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- API Modules -->
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>auth-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>gamification-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>group-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>task-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>user-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Shared Modules -->
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>shared-kernel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>shared-persistence</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.gamilife</groupId>
                <artifactId>shared-web</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.coverage.exclusions>
            **/config/**,
            **/dto/**,
            **/exception/**,
        </sonar.coverage.exclusions>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                    <parameters>true</parameters>
                </configuration>
                <version>3.14.1</version>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
                <version>3.5.6</version>
            </plugin>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>5.5.0.6356</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.14</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>prod</id>
            <properties>
                <skipTests>true</skipTests>
            </properties>
        </profile>
    </profiles>

</project>
